--- a/Thesis/Application.Console/App.config
+++ b/Thesis/Application.Console/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
+  <connectionStrings>
+    <add name="ThesisDbContext" connectionString="Server=ILZ1-LHP-K50323;Database=ThesisDatabase;Trusted_Connection=True;" providerName="System.Data.CData.MongoDB" />
+  </connectionStrings>
 </configuration>
