--- a/Thesis/Application.Console/Application.Console.csproj
+++ b/Thesis/Application.Console/Application.Console.csproj
@@ -47,7 +47,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Repository\Repository.MSSQL.csproj">
+      <Project>{d6f7c46e-4415-4a7e-b49a-c5ff7b75c554}</Project>
+      <Name>Repository.MSSQL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
