--- a/Thesis/Repository.MSSQL.Tests/Repository.MSSQL.Tests.csproj
+++ b/Thesis/Repository.MSSQL.Tests/Repository.MSSQL.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D6F7C46E-4415-4A7E-B49A-C5FF7B75C554}</ProjectGuid>
+    <ProjectGuid>{28EB37A1-6563-4159-BCD3-3EEB2F7A87F8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Repository</RootNamespace>
-    <AssemblyName>Repository</AssemblyName>
+    <RootNamespace>Repository.MSSQL.Tests</RootNamespace>
+    <AssemblyName>Repository.MSSQL.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -38,6 +38,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="nunit.framework, Version=3.8.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.8.1\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -49,36 +53,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Migrations\201709251628504_migration1.cs" />
-    <Compile Include="Migrations\201709251628504_migration1.Designer.cs">
-      <DependentUpon>201709251628504_migration1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201709261156547_migration2.cs" />
-    <Compile Include="Migrations\201709261156547_migration2.Designer.cs">
-      <DependentUpon>201709261156547_migration2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201709261227126_migration3.cs" />
-    <Compile Include="Migrations\201709261227126_migration3.Designer.cs">
-      <DependentUpon>201709261227126_migration3.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="RepositoryBase.cs" />
-    <Compile Include="ThesisDbContext.cs" />
+    <Compile Include="FrequentConstatnts.cs" />
+    <Compile Include="Integration\IntegrationBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\Domain.csproj">
-      <Project>{1cf2e426-2503-4a54-ab1d-4fd5fb73450b}</Project>
-      <Name>Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Common\Common.csproj">
-      <Project>{3b06ed1e-e0aa-4b72-bfcc-4a356d5c0f68}</Project>
-      <Name>Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FileHelper\FileHelper.csproj">
-      <Project>{1B994374-DB38-426C-912A-FECD5CE9F35D}</Project>
-      <Name>FileHelper</Name>
-    </ProjectReference>
+    <Compile Include="Integration\RepositoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -87,15 +65,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201709251628504_migration1.resx">
-      <DependentUpon>201709251628504_migration1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201709261156547_migration2.resx">
-      <DependentUpon>201709261156547_migration2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201709261227126_migration3.resx">
-      <DependentUpon>201709261227126_migration3.cs</DependentUpon>
-    </EmbeddedResource>
+    <ProjectReference Include="..\ClassLibrary1\Domain.csproj">
+      <Project>{1cf2e426-2503-4a54-ab1d-4fd5fb73450b}</Project>
+      <Name>Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Repository\Repository.MSSQL.csproj">
+      <Project>{d6f7c46e-4415-4a7e-b49a-c5ff7b75c554}</Project>
+      <Name>Repository.MSSQL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
