--- a/Thesis/GraphAlgorithms.Tests/GraphAlgorithms.Tests.csproj
+++ b/Thesis/GraphAlgorithms.Tests/GraphAlgorithms.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1CF2E426-2503-4A54-AB1D-4FD5FB73450B}</ProjectGuid>
+    <ProjectGuid>{CF6C3EE9-2617-439D-84AC-7E396A446D4A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Domain</RootNamespace>
-    <AssemblyName>Domain</AssemblyName>
+    <RootNamespace>GraphAlgorithms.Tests</RootNamespace>
+    <AssemblyName>GraphAlgorithms.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="nunit.framework, Version=3.8.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.8.1\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -41,16 +53,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DomainClasses\DomainBase.cs" />
-    <Compile Include="DomainClasses\Email.cs" />
-    <Compile Include="DomainClasses\EmailRecipient.cs" />
-    <Compile Include="DomainClasses\User.cs" />
-    <Compile Include="GraphClasses\Edge.cs" />
-    <Compile Include="GraphClasses\Graph.cs" />
-    <Compile Include="GraphClasses\Vertex.cs" />
-    <Compile Include="..\Domain\Properties\AssemblyInfo.cs">
-      <Link>Properties\AssemblyInfo.cs</Link>
-    </Compile>
+    <Compile Include="GraphAlgorithmsTests.cs" />
+    <Compile Include="IntegrationBase.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj">
+      <Project>{33338734-71ef-4c86-8ad1-4e339d52e694}</Project>
+      <Name>Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Graph.Algorithms\Graph.Algorithms.csproj">
+      <Project>{8d518857-8db3-4778-9c2b-7a9714b7cbf5}</Project>
+      <Name>Graph.Algorithms</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Repository\Repository.MSSQL.csproj">
+      <Project>{d6f7c46e-4415-4a7e-b49a-c5ff7b75c554}</Project>
+      <Name>Repository.MSSQL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
