--- a/Thesis/Repository/Repository.MSSQL.csproj
+++ b/Thesis/Repository/Repository.MSSQL.csproj
@@ -50,24 +50,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonRepository.cs" />
+    <Compile Include="ConversationRepository.cs" />
     <Compile Include="GraphRepository.cs" />
     <Compile Include="Interfaces\ICommonRepository.cs" />
+    <Compile Include="Interfaces\IConversationRepository.cs" />
     <Compile Include="Interfaces\IGraphRepository.cs" />
     <Compile Include="Interfaces\IThesisDbContext.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Interfaces\IUnitOfWorkFactory.cs" />
     <Compile Include="Interfaces\IUserRepository.cs" />
-    <Compile Include="Migrations\201709251628504_migration1.cs" />
-    <Compile Include="Migrations\201709251628504_migration1.Designer.cs">
-      <DependentUpon>201709251628504_migration1.cs</DependentUpon>
+    <Compile Include="Migrations\201711051821497_migration1.cs" />
+    <Compile Include="Migrations\201711051821497_migration1.Designer.cs">
+      <DependentUpon>201711051821497_migration1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201709261156547_migration2.cs" />
-    <Compile Include="Migrations\201709261156547_migration2.Designer.cs">
-      <DependentUpon>201709261156547_migration2.cs</DependentUpon>
+    <Compile Include="Migrations\201711051827252_migration2.cs" />
+    <Compile Include="Migrations\201711051827252_migration2.Designer.cs">
+      <DependentUpon>201711051827252_migration2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201709261227126_migration3.cs" />
-    <Compile Include="Migrations\201709261227126_migration3.Designer.cs">
-      <DependentUpon>201709261227126_migration3.cs</DependentUpon>
+    <Compile Include="Migrations\201711051836087_migration3.cs" />
+    <Compile Include="Migrations\201711051836087_migration3.Designer.cs">
+      <DependentUpon>201711051836087_migration3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711061845499_migration4.cs" />
+    <Compile Include="Migrations\201711061845499_migration4.Designer.cs">
+      <DependentUpon>201711061845499_migration4.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="RepositoryBase.cs" />
@@ -78,13 +84,13 @@
     <Compile Include="UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\Domain.csproj">
-      <Project>{1cf2e426-2503-4a54-ab1d-4fd5fb73450b}</Project>
-      <Name>Domain</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{3b06ed1e-e0aa-4b72-bfcc-4a356d5c0f68}</Project>
       <Name>Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Domain\Domain.csproj">
+      <Project>{33338734-71ef-4c86-8ad1-4e339d52e694}</Project>
+      <Name>Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -94,14 +100,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201709251628504_migration1.resx">
-      <DependentUpon>201709251628504_migration1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201711051821497_migration1.resx">
+      <DependentUpon>201711051821497_migration1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201709261156547_migration2.resx">
-      <DependentUpon>201709261156547_migration2.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201711051827252_migration2.resx">
+      <DependentUpon>201711051827252_migration2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201709261227126_migration3.resx">
-      <DependentUpon>201709261227126_migration3.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201711051836087_migration3.resx">
+      <DependentUpon>201711051836087_migration3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711061845499_migration4.resx">
+      <DependentUpon>201711061845499_migration4.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
