--- a/Thesis/FileManager/FileManager.csproj
+++ b/Thesis/FileManager/FileManager.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1B994374-DB38-426C-912A-FECD5CE9F35D}</ProjectGuid>
+    <ProjectGuid>{C202EBF9-A484-4C88-BD0A-65E404DA96CB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FileHelper</RootNamespace>
-    <AssemblyName>FileHelper</AssemblyName>
+    <RootNamespace>FileManager</RootNamespace>
+    <AssemblyName>FileManager</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,17 +40,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XmlParser.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\Domain.csproj">
-      <Project>{1cf2e426-2503-4a54-ab1d-4fd5fb73450b}</Project>
+    <ProjectReference Include="..\Domain\Domain.csproj">
+      <Project>{33338734-71ef-4c86-8ad1-4e339d52e694}</Project>
       <Name>Domain</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Common\Common.csproj">
-      <Project>{3b06ed1e-e0aa-4b72-bfcc-4a356d5c0f68}</Project>
-      <Name>Common</Name>
+    <ProjectReference Include="..\Graph.Algorithms\Graph.Algorithms.csproj">
+      <Project>{8d518857-8db3-4778-9c2b-7a9714b7cbf5}</Project>
+      <Name>Graph.Algorithms</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
