--- a/Thesis/Repository/App.config
+++ b/Thesis/Repository/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ThesisDbContext" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisDatabase;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="GLEmailsDatabase" connectionString="Server=(localdb)\mssqllocaldb;Database=GLEmailsDatabase;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
