--- a/Thesis/Domain/Domain.csproj
+++ b/Thesis/Domain/Domain.csproj
@@ -59,11 +59,12 @@
     <Compile Include="DomainClasses\Email.cs" />
     <Compile Include="DomainClasses\EmailRecipient.cs" />
     <Compile Include="DomainClasses\User.cs" />
+    <Compile Include="DomainClasses\UserEmail.cs" />
     <Compile Include="Enums\Role.cs" />
     <Compile Include="GraphClasses\Community.cs" />
     <Compile Include="GraphClasses\Edge.cs" />
     <Compile Include="GraphClasses\Graph.cs" />
-    <Compile Include="GraphClasses\Vertex.cs" />
+    <Compile Include="GraphClasses\Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
