--- a/Thesis/Application.Console/App.config
+++ b/Thesis/Application.Console/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
   <connectionStrings>
-    <add name="GLEmailsDatabase" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisTiborNetwork;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="GLEmailsDatabase" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisDatabase;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
