--- a/Thesis/Thesis.Web/Web.config
+++ b/Thesis/Thesis.Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="GLEmailsDatabase" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisVeronikaNetwork;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="GLEmailsDatabase" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisDatabase;Integrated Security=true;" providerName="System.Data.SqlClient" />
     <add name="GLEmailsDatabaseVeronika" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisVeronikaNetwork;Integrated Security=true;" providerName="System.Data.SqlClient" />
     <add name="GLEmailsDatabaseTibor" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisTiborNetwork;Integrated Security=true;" providerName="System.Data.SqlClient" />
     <add name="GLEmailsDatabaseAndrej" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisAndrejPNetwork;Integrated Security=true;" providerName="System.Data.SqlClient" />
@@ -20,6 +20,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="aspnet:MaxJsonDeserializerMembers" value="300000" />
+    <add key="vs:EnableBrowserLink" value="false"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
