--- a/Thesis/Thesis.Web/Web.config
+++ b/Thesis/Thesis.Web/Web.config
@@ -20,8 +20,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="aspnet:MaxJsonDeserializerMembers" value="300000" />
-    <add key="vs:EnableBrowserLink" value="false"/>
+    <add key="aspnet:MaxJsonDeserializerMembers" value="300000000" />
+    <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
@@ -34,7 +34,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
