--- a/Thesis/Repository/App.config
+++ b/Thesis/Repository/App.config
@@ -6,6 +6,11 @@
   </configSections>
   <connectionStrings>
     <add name="GLEmailsDatabase" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisDatabase;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="GLEmailsDatabaseVeronika" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisVeronikaNetwork;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="GLEmailsDatabaseTibor" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisTiborNetwork;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="GLEmailsDatabaseAndrej" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisAndrejPNetwork;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="GLEmailsDatabaseAdo" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisAndrejMNetwork;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="ThesisImportDatabase" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisImportDatabase;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
