--- a/Thesis/Thesis.Web/Web.config
+++ b/Thesis/Thesis.Web/Web.config
@@ -14,6 +14,7 @@
     <add name="GLEmailsDatabaseTibor" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisTiborNetwork;Integrated Security=true;" providerName="System.Data.SqlClient" />
     <add name="GLEmailsDatabaseAndrej" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisAndrejPNetwork;Integrated Security=true;" providerName="System.Data.SqlClient" />
     <add name="GLEmailsDatabaseAdo" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisAndrejMNetwork;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="ThesisImportDatabase" connectionString="Server=(localdb)\mssqllocaldb;Database=ThesisImportDatabase;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
