--- a/Thesis/Thesis.Services/Thesis.Services.csproj
+++ b/Thesis/Thesis.Services/Thesis.Services.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmailService.cs" />
     <Compile Include="GraphService.cs" />
     <Compile Include="Interfaces\IGraphService.cs" />
     <Compile Include="Interfaces\IThesisObjectFactory.cs" />
