--- a/Thesis/Thesis.Web/compilerconfig.json
+++ b/Thesis/Thesis.Web/compilerconfig.json
@@ -6,5 +6,9 @@
   {
     "outputFile": "Content/constants.css",
     "inputFile": "Content/constants.scss"
+  },
+  {
+    "outputFile": "Content/toastr.css",
+    "inputFile": "Content/toastr.scss"
   }
 ]
