--- a/Thesis/Thesis.Services/Thesis.Services.csproj
+++ b/Thesis/Thesis.Services/Thesis.Services.csproj
@@ -80,6 +80,9 @@
     <Compile Include="Interfaces\IThesisObjectFactory.cs" />
     <Compile Include="Interfaces\IServiceFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResponseTypes\FetchItemServiceResponse.cs" />
+    <Compile Include="ResponseTypes\FetchListServiceResponse.cs" />
+    <Compile Include="ResponseTypes\ServiceResponse.cs" />
     <Compile Include="ServiceBase.cs" />
     <Compile Include="ServiceFactory.cs" />
     <Compile Include="ThesisObjectFactory.cs" />
