--- a/Thesis/Thesis.Web/Thesis.Web.csproj
+++ b/Thesis/Thesis.Web/Thesis.Web.csproj
@@ -177,6 +177,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\SimpleInjectorDependencyResolver.cs" />
+    <Compile Include="Controllers\ControllerExtensions.cs" />
     <Compile Include="Controllers\EmailDownloadController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ImportXMLFileController.cs" />
@@ -190,6 +191,9 @@
     <Compile Include="DTOs\TeamMemberDto.cs" />
     <Compile Include="Models\EmailDownloadViewModel.cs" />
     <Compile Include="Models\GraphViewModel.cs" />
+    <Compile Include="Models\ToastMessage.cs" />
+    <Compile Include="Models\Toastr.cs" />
+    <Compile Include="Models\ToastType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -222,6 +226,7 @@
     <Content Include="Content\fontawesome\fontawesome.css" />
     <Content Include="Content\fontawesome\fontawesome.min.css" />
     <Content Include="Content\inputfile.css" />
+    <Content Include="Content\toastr.css" />
     <Content Include="Content\webfonts\fa-brands-400.svg" />
     <Content Include="Content\webfonts\fa-regular-400.svg" />
     <Content Include="Content\webfonts\fa-solid-900.svg" />
@@ -247,6 +252,7 @@
     <Content Include="Scripts\bootstrap.js.map" />
     <Content Include="Scripts\bootstrap.min.js.map" />
     <Content Include="Content\custom.scss" />
+    <Content Include="App_Code\ToastrBuilder.cshtml" />
     <None Include="compilerconfig.json" />
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
@@ -278,6 +284,8 @@
     <Content Include="Scripts\popper.min.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\toastr.js" />
+    <Content Include="Scripts\toastr.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Scripts\vis\img\network\acceptDeleteIcon.png" />
     <Content Include="Scripts\vis\img\network\addNodeIcon.png" />
@@ -340,6 +348,7 @@
     <Content Include="Views\TeamMembersEmailGraphs\GraphView_partial.cshtml" />
     <Content Include="Views\ImportXMLFile\Index.cshtml" />
     <Content Include="Views\EmailDownload\Index.cshtml" />
+    <Content Include="Views\Shared\_Toastr.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
