--- a/Thesis/Thesis.Web/packages.config
+++ b/Thesis/Thesis.Web/packages.config
@@ -29,6 +29,7 @@
   <package id="Respond" version="1.2.0" targetFramework="net46" />
   <package id="SimpleInjector" version="4.0.12" targetFramework="net46" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
+  <package id="toastr" version="2.1.1" targetFramework="net46" />
   <package id="vis.js" version="4.21.0" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
