--- a/Thesis/Thesis.Web/compilerconfig.json
+++ b/Thesis/Thesis.Web/compilerconfig.json
@@ -10,5 +10,9 @@
   {
     "outputFile": "Content/toastr.css",
     "inputFile": "Content/toastr.scss"
+  },
+  {
+    "outputFile": "Content/daterangepicker.css",
+    "inputFile": "Content/daterangepicker.scss"
   }
 ]
