--- a/Thesis/Domain/Thesis.Domain.csproj
+++ b/Thesis/Domain/Thesis.Domain.csproj
@@ -55,7 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Brokerage.cs" />
-    <Compile Include="BrokerageBase.cs" />
+    <Compile Include="DTOs\BrokerageDto.cs" />
     <Compile Include="DomainClasses\Conversation.cs" />
     <Compile Include="DomainClasses\ConversationEmails.cs" />
     <Compile Include="DomainClasses\DomainBase.cs" />
