--- a/Thesis/Thesis.Web/Thesis.Web.csproj
+++ b/Thesis/Thesis.Web/Thesis.Web.csproj
@@ -101,6 +101,7 @@
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.4.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
     </Reference>
@@ -182,6 +183,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ImportXMLFileController.cs" />
     <Compile Include="Controllers\TeamMembersEmailGraphsController.cs" />
+    <Compile Include="DTOs\DataPointDto.cs" />
     <Compile Include="DTOs\EdgeDto.cs" />
     <Compile Include="DTOs\GraphDto.cs" />
     <Compile Include="DTOs\NodeDto.cs" />
